--- a/ResourceXAML/MainResource.xaml
+++ b/ResourceXAML/MainResource.xaml
@@ -1,21 +1,22 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:viewmodel="clr-namespace:SportCenter.ViewModel"
-                    xmlns:local="clr-namespace:SportCenter.ResourceXAML">
-    <viewmodel:SoccerFieldViewModel x:Key="SoccerFieldVM"></viewmodel:SoccerFieldViewModel>
-    <viewmodel:BasketballFieldViewModel x:Key="BasketballFieldVM"></viewmodel:BasketballFieldViewModel>
-    <viewmodel:VolleyballFieldViewModel x:Key="VolleyballFieldVM"></viewmodel:VolleyballFieldViewModel>
-    <viewmodel:MainViewModel x:Key="MainVM"></viewmodel:MainViewModel>
-    <viewmodel:LoginViewModel x:Key="LoginVM"></viewmodel:LoginViewModel>
-    <viewmodel:BillViewModel x:Key="BillVM"></viewmodel:BillViewModel>
-    <viewmodel:BillViewModel_Football2 x:Key="BillVM_FB2"></viewmodel:BillViewModel_Football2>
-    <viewmodel:BillViewModel_BasketBall x:Key="BillVM_BKB"></viewmodel:BillViewModel_BasketBall>
-    <viewmodel:BillViewModel_VolleyBall x:Key="BillVM_VLB"></viewmodel:BillViewModel_VolleyBall>
-    <viewmodel:BillReportViewModel x:Key="BillReportVM"></viewmodel:BillReportViewModel>
-    <viewmodel:AddFieldViewModel x:Key="AddFieldVM"></viewmodel:AddFieldViewModel>
-    <viewmodel:BookingViewModel x:Key="BookingVM"></viewmodel:BookingViewModel>
-    <viewmodel:FastBookingBasketballViewModel x:Key="FastBookingBasketballVM"></viewmodel:FastBookingBasketballViewModel>
-    <viewmodel:FastBookingSoccerViewModel x:Key="FastBookingSoccerVM"></viewmodel:FastBookingSoccerViewModel>
-    <viewmodel:FastBookingVolleyballViewModel x:Key="FastBookingVolleyballVM"></viewmodel:FastBookingVolleyballViewModel>
-    <viewmodel:EmployeeViewModel x:Key="EmployeeVM"></viewmodel:EmployeeViewModel>
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:SportCenter.ResourceXAML"
+    xmlns:viewmodel="clr-namespace:SportCenter.ViewModel">
+    <viewmodel:SoccerFieldViewModel x:Key="SoccerFieldVM" />
+    <viewmodel:BasketballFieldViewModel x:Key="BasketballFieldVM" />
+    <viewmodel:VolleyballFieldViewModel x:Key="VolleyballFieldVM" />
+    <viewmodel:MainViewModel x:Key="MainVM" />
+    <viewmodel:LoginViewModel x:Key="LoginVM" />
+    <viewmodel:BillViewModel x:Key="BillVM" />
+    <viewmodel:BillViewModel_Football2 x:Key="BillVM_FB2" />
+    <viewmodel:BillViewModel_BasketBall x:Key="BillVM_BKB" />
+    <viewmodel:BillViewModel_VolleyBall x:Key="BillVM_VLB" />
+    <viewmodel:BillReportViewModel x:Key="BillReportVM" />
+    <viewmodel:AddFieldViewModel x:Key="AddFieldVM" />
+    <viewmodel:BookingViewModel x:Key="BookingVM" />
+    <viewmodel:FastBookingBasketballViewModel x:Key="FastBookingBasketballVM" />
+    <viewmodel:FastBookingSoccerViewModel x:Key="FastBookingSoccerVM" />
+    <viewmodel:FastBookingVolleyballViewModel x:Key="FastBookingVolleyballVM" />
+    <viewmodel:EmployeeViewModel x:Key="EmployeeVM" />
 </ResourceDictionary>
