--- a/Add_Field.xaml
+++ b/Add_Field.xaml
@@ -1,73 +1,100 @@
-﻿<Window x:Class="SportCenter.Add_Field"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SportCenter"
-        mc:Ignorable="d"
-        xmlns:uc="clr-namespace:SportCenter.UserControlKteam"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        TextElement.FontWeight="Regular"
-        TextElement.FontSize="13"
-        TextOptions.TextFormattingMode="Ideal"
-        TextOptions.TextRenderingMode="Auto"
-        Background="#FFEEE9FA"
-        FontFamily="{DynamicResource MaterialDesignFont}"
-        ResizeMode="NoResize"
-        DataContext="{StaticResource AddFieldVM}"
-        WindowStartupLocation="CenterScreen"
-        WindowStyle="None"
-        x:Name="Add_Filed"
-        Title="Add_Field" Height="300" Width="600">
+﻿<Window
+    x:Class="SportCenter.Add_Field"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:SportCenter"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:uc="clr-namespace:SportCenter.UserControlKteam"
+    x:Name="Add_Filed"
+    Title="Add_Field"
+    Width="600"
+    Height="300"
+    Background="#FFEEE9FA"
+    DataContext="{StaticResource AddFieldVM}"
+    FontFamily="{DynamicResource MaterialDesignFont}"
+    ResizeMode="NoResize"
+    TextElement.FontSize="13"
+    TextElement.FontWeight="Regular"
+    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    TextOptions.TextFormattingMode="Ideal"
+    TextOptions.TextRenderingMode="Auto"
+    WindowStartupLocation="CenterScreen"
+    WindowStyle="None"
+    mc:Ignorable="d">
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="50"></RowDefinition>
-                <RowDefinition Height="30"></RowDefinition>
-                <RowDefinition></RowDefinition>
+                <RowDefinition Height="50" />
+                <RowDefinition Height="30" />
+                <RowDefinition />
             </Grid.RowDefinitions>
 
             <Grid Grid.Row="0">
-                <uc:ControlBarUC Tag="{Binding Title, ElementName=mainWindow}" Grid.ColumnSpan="2"></uc:ControlBarUC>
+                <uc:ControlBarUC Grid.ColumnSpan="2" Tag="{Binding Title, ElementName=mainWindow}" />
             </Grid>
-            <TextBlock Grid.Row="1" VerticalAlignment="Center"
-            x:Name="txbSetField" 
-            TextWrapping="Wrap" 
-            Text="Add field" 
-            FontSize="40"
-            HorizontalAlignment="Center" 
-            FontWeight="Bold"/>
+            <TextBlock
+                x:Name="txbSetField"
+                Grid.Row="1"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontSize="40"
+                FontWeight="Bold"
+                Text="Add field"
+                TextWrapping="Wrap" />
             <Grid Grid.Row="2">
                 <WrapPanel Margin="73,0,-73,0">
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="50"></RowDefinition>
-                            <RowDefinition Height="50"></RowDefinition>
-                            <RowDefinition Height="50"></RowDefinition>
-                            <RowDefinition></RowDefinition>
+                            <RowDefinition Height="50" />
+                            <RowDefinition Height="50" />
+                            <RowDefinition Height="50" />
+                            <RowDefinition />
                         </Grid.RowDefinitions>
-                        <WrapPanel Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" >
-                            <Label Content="Field name: " Width="100"/>
-                            <TextBox x:Name="addname" Text="{Binding addfieldname}" Width="300"/>
+                        <WrapPanel
+                            Grid.Row="0"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center">
+                            <Label Width="100" Content="Field name: " />
+                            <TextBox
+                                x:Name="addname"
+                                Width="300"
+                                Text="{Binding addfieldname}" />
                         </WrapPanel>
-                        <WrapPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
-                            <Label Content="Field type: " Width="100"/>
-                            <ComboBox IsReadOnly="False" ItemsSource="{Binding Listfieldtype}" SelectedItem="{Binding selecttedype, Mode=TwoWay}" x:Name="addtype" Width="300">
+                        <WrapPanel
+                            Grid.Row="1"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center">
+                            <Label Width="100" Content="Field type: " />
+                            <ComboBox
+                                x:Name="addtype"
+                                Width="300"
+                                IsReadOnly="False"
+                                ItemsSource="{Binding Listfieldtype}"
+                                SelectedItem="{Binding selecttedype, Mode=TwoWay}">
 
                                 <ComboBox.ItemTemplate>
                                     <DataTemplate>
                                         <StackPanel>
-                                            <TextBlock Text="{Binding name}"></TextBlock>
+                                            <TextBlock Text="{Binding name}" />
                                         </StackPanel>
                                     </DataTemplate>
                                 </ComboBox.ItemTemplate>
                             </ComboBox>
                         </WrapPanel>
-                        <WrapPanel Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" >
-                            <Label Content="Field condition: " Width="100"/>
+                        <WrapPanel
+                            Grid.Row="2"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center">
+                            <Label Width="100" Content="Field condition: " />
 
-                            <ComboBox IsReadOnly="True" SelectedValue="{Binding selectcondition}" SelectedValuePath="Content" Width="300" x:Name="addcondition" >
+                            <ComboBox
+                                x:Name="addcondition"
+                                Width="300"
+                                IsReadOnly="True"
+                                SelectedValue="{Binding selectcondition}"
+                                SelectedValuePath="Content">
                                 <ComboBoxItem>Good</ComboBoxItem>
                                 <ComboBoxItem>Normal</ComboBoxItem>
                                 <ComboBoxItem>Repairing</ComboBoxItem>
@@ -75,14 +102,36 @@
                         </WrapPanel>
                         <Grid Grid.Row="3">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition></ColumnDefinition>
-                                <ColumnDefinition/>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
                             </Grid.ColumnDefinitions>
-                            <Button Command="{Binding AddFieldCommand}" Grid.Column="0"  HorizontalAlignment="Center"  materialDesign:ButtonAssist.CornerRadius="5" HorizontalContentAlignment="Stretch" VerticalAlignment="Center" Width="128">
-                                <TextBlock Margin="5 0 0 0" Text="Add" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                            <Button
+                                Grid.Column="0"
+                                Width="128"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                HorizontalContentAlignment="Stretch"
+                                materialDesign:ButtonAssist.CornerRadius="5"
+                                Command="{Binding AddFieldCommand}">
+                                <TextBlock
+                                    Margin="5,0,0,0"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Text="Add" />
                             </Button>
-                            <Button Click="btnThoat_Click" Grid.Column="2"   HorizontalAlignment="Center"  materialDesign:ButtonAssist.CornerRadius="5" HorizontalContentAlignment="Stretch" VerticalAlignment="Center" Width="128">
-                                <TextBlock Margin="5 0 0 0" Text="Cancel" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                            <Button
+                                Grid.Column="2"
+                                Width="128"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                HorizontalContentAlignment="Stretch"
+                                materialDesign:ButtonAssist.CornerRadius="5"
+                                Click="btnThoat_Click">
+                                <TextBlock
+                                    Margin="5,0,0,0"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Text="Cancel" />
                             </Button>
                         </Grid>
                     </Grid>
