--- a/Bill_Report.xaml
+++ b/Bill_Report.xaml
@@ -1,57 +1,64 @@
-﻿<Window x:Class="SportCenter.Bill_Report"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SportCenter" xmlns:uc="clr-namespace:SportCenter.UserControlKteam"
-        mc:Ignorable="d"
-        WindowStartupLocation="CenterScreen"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        TextElement.FontWeight="Regular"
-        TextElement.FontSize="13"
-        TextOptions.TextFormattingMode="Ideal"
-        TextOptions.TextRenderingMode="Auto"
-        Background="#FFEEE9FA"
-        FontFamily="{DynamicResource MaterialDesignFont}"
-        ResizeMode="NoResize"
-        WindowStyle="None"
-        x:Name="Bill_report"
-        DataContext="{StaticResource BillReportVM}"
-        Title="Bill_Report" Height="800" Width="600">
+﻿<Window
+    x:Class="SportCenter.Bill_Report"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:SportCenter"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:uc="clr-namespace:SportCenter.UserControlKteam"
+    x:Name="Bill_report"
+    Title="Bill_Report"
+    Width="600"
+    Height="800"
+    Background="#FFEEE9FA"
+    DataContext="{StaticResource BillReportVM}"
+    FontFamily="{DynamicResource MaterialDesignFont}"
+    ResizeMode="NoResize"
+    TextElement.FontSize="13"
+    TextElement.FontWeight="Regular"
+    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    TextOptions.TextFormattingMode="Ideal"
+    TextOptions.TextRenderingMode="Auto"
+    WindowStartupLocation="CenterScreen"
+    WindowStyle="None"
+    mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="100"></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="100" />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <uc:ControlBarUC Tag="{Binding Title, ElementName=BillWindow}" />
         </Grid>
 
         <Grid Grid.Row="1">
-            <TextBlock Text="BILL REPORT" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="100" FontFamily="Playbill" >
-                
-            </TextBlock>
+            <TextBlock
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontFamily="Playbill"
+                FontSize="100"
+                Text="BILL REPORT" />
         </Grid>
-        
+
         <Grid Grid.Row="2">
             <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
                 <ItemsControl x:Name="IcUCbillreport" ItemsSource="{Binding DatagridListView}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <uc:BillShortCut></uc:BillShortCut>
+                            <uc:BillShortCut />
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
-                    
-                    
-                    
+
+
+
                 </ItemsControl>
-                
-                
+
+
             </ScrollViewer>
-            
-            
+
+
         </Grid>
-        
+
     </Grid>
 </Window>
