--- a/EditScField.xaml
+++ b/EditScField.xaml
@@ -1,55 +1,73 @@
-﻿<Window x:Class="SportCenter.EditScField"
-         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SportCenter"
-        mc:Ignorable="d"
-        xmlns:uc="clr-namespace:SportCenter.UserControlKteam"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        TextElement.FontWeight="Regular"
-        TextElement.FontSize="13"
-        TextOptions.TextFormattingMode="Ideal"
-        TextOptions.TextRenderingMode="Auto"
-        Background="#FFEEE9FA"
-        FontFamily="{DynamicResource MaterialDesignFont}"
-        ResizeMode="NoResize"
-        WindowStyle="None"
-        WindowStartupLocation="CenterScreen"
-        DataContext="{StaticResource SoccerFieldVM}"
-        x:Name="EditBkFiled"
-        Title="EditBkField" Height="600" Width="800">
+﻿<Window
+    x:Class="SportCenter.EditScField"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:SportCenter"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:uc="clr-namespace:SportCenter.UserControlKteam"
+    x:Name="EditBkFiled"
+    Title="EditBkField"
+    Width="800"
+    Height="600"
+    Background="#FFEEE9FA"
+    DataContext="{StaticResource SoccerFieldVM}"
+    FontFamily="{DynamicResource MaterialDesignFont}"
+    ResizeMode="NoResize"
+    TextElement.FontSize="13"
+    TextElement.FontWeight="Regular"
+    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    TextOptions.TextFormattingMode="Ideal"
+    TextOptions.TextRenderingMode="Auto"
+    WindowStartupLocation="CenterScreen"
+    WindowStyle="None"
+    mc:Ignorable="d">
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="auto" />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
-            <uc:ControlBarUC Tag="{Binding Title, ElementName=mainWindow}" Grid.ColumnSpan="2"></uc:ControlBarUC>
+            <uc:ControlBarUC Grid.ColumnSpan="2" Tag="{Binding Title, ElementName=mainWindow}" />
         </Grid>
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="120"></RowDefinition>
-                <RowDefinition></RowDefinition>
+                <RowDefinition Height="120" />
+                <RowDefinition />
             </Grid.RowDefinitions>
 
             <materialDesign:Card Grid.Row="0" Margin="20">
-                <WrapPanel Margin="0 0 0 10">
-                    <TextBox Text="{Binding FieldName, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Margin="5 5 15 5" materialDesign:HintAssist.Hint="Field name" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
-                    <TextBox Text="{Binding FieldCondition, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Margin="5 5 15 5" materialDesign:HintAssist.Hint="Condition" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
-                    <Button Command="{Binding EditField}" Content="Sửa" Margin="20" Width="100"></Button>
+                <WrapPanel Margin="0,0,0,10">
+                    <TextBox
+                        Margin="5,5,15,5"
+                        materialDesign:HintAssist.Hint="Field name"
+                        Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                        Text="{Binding FieldName, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
+                    <TextBox
+                        Margin="5,5,15,5"
+                        materialDesign:HintAssist.Hint="Condition"
+                        Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                        Text="{Binding FieldCondition, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
+                    <Button
+                        Width="100"
+                        Margin="20"
+                        Command="{Binding EditField}"
+                        Content="Sửa" />
                 </WrapPanel>
             </materialDesign:Card>
-            <materialDesign:Card Grid.Row="1" Margin="20" VerticalAlignment="Stretch">
+            <materialDesign:Card
+                Grid.Row="1"
+                Margin="20"
+                VerticalAlignment="Stretch">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <ListView ItemsSource="{Binding List}" SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn Header="Id" DisplayMemberBinding="{Binding id}"></GridViewColumn>
-                                <GridViewColumn Header="Field name" DisplayMemberBinding="{Binding name}"></GridViewColumn>
-                                <GridViewColumn Header="Condition" DisplayMemberBinding="{Binding condition}"></GridViewColumn>
+                                <GridViewColumn DisplayMemberBinding="{Binding id}" Header="Id" />
+                                <GridViewColumn DisplayMemberBinding="{Binding name}" Header="Field name" />
+                                <GridViewColumn DisplayMemberBinding="{Binding condition}" Header="Condition" />
                             </GridView>
                         </ListView.View>
                     </ListView>
