--- a/FastBookingVl.xaml
+++ b/FastBookingVl.xaml
@@ -1,102 +1,148 @@
-﻿<Window x:Class="SportCenter.FastBookingVl"
-       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SportCenter"
-        mc:Ignorable="d"
-        xmlns:uc="clr-namespace:SportCenter.UserControlKteam"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        TextElement.FontWeight="Regular"
-        TextElement.FontSize="13"
-        TextOptions.TextFormattingMode="Ideal"
-        TextOptions.TextRenderingMode="Auto"
-        Background="#FFEEE9FA"
-        FontFamily="{DynamicResource MaterialDesignFont}"
-        ResizeMode="NoResize"
-        DataContext="{StaticResource FastBookingVolleyballVM}"
-        WindowStyle="None"
-        WindowStartupLocation="CenterScreen"
-        x:Name="FastBookingVll"
-        Title="FastBookingVll" Height="300" Width="600">
+﻿<Window
+    x:Class="SportCenter.FastBookingVl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:SportCenter"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:uc="clr-namespace:SportCenter.UserControlKteam"
+    x:Name="FastBookingVll"
+    Title="FastBookingVll"
+    Width="600"
+    Height="300"
+    Background="#FFEEE9FA"
+    DataContext="{StaticResource FastBookingVolleyballVM}"
+    FontFamily="{DynamicResource MaterialDesignFont}"
+    ResizeMode="NoResize"
+    TextElement.FontSize="13"
+    TextElement.FontWeight="Regular"
+    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    TextOptions.TextFormattingMode="Ideal"
+    TextOptions.TextRenderingMode="Auto"
+    WindowStartupLocation="CenterScreen"
+    WindowStyle="None"
+    mc:Ignorable="d">
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="50"></RowDefinition>
-                <RowDefinition Height="50"></RowDefinition>
-                <RowDefinition></RowDefinition>
+                <RowDefinition Height="50" />
+                <RowDefinition Height="50" />
+                <RowDefinition />
             </Grid.RowDefinitions>
 
             <Grid Grid.Row="0">
-                <uc:ControlBarUC Tag="{Binding Title, ElementName=mainWindow}" Grid.ColumnSpan="2"></uc:ControlBarUC>
+                <uc:ControlBarUC Grid.ColumnSpan="2" Tag="{Binding Title, ElementName=mainWindow}" />
             </Grid>
-            <TextBlock Grid.Row="1"
-            x:Name="txbSetField" 
-            TextWrapping="Wrap" 
-            Text="Fast booking" 
-            FontSize="40"
-            HorizontalAlignment="Center" 
-            FontWeight="Bold"/>
+            <TextBlock
+                x:Name="txbSetField"
+                Grid.Row="1"
+                HorizontalAlignment="Center"
+                FontSize="40"
+                FontWeight="Bold"
+                Text="Fast booking"
+                TextWrapping="Wrap" />
             <Grid Grid.Row="2">
                 <WrapPanel Margin="76,0,-76,0.4">
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition ></RowDefinition>
-                            <RowDefinition></RowDefinition>
-                            <RowDefinition></RowDefinition>
-                            <RowDefinition></RowDefinition>
-                            <RowDefinition ></RowDefinition>
-                            <RowDefinition ></RowDefinition>
+                            <RowDefinition />
+                            <RowDefinition />
+                            <RowDefinition />
+                            <RowDefinition />
+                            <RowDefinition />
+                            <RowDefinition />
                         </Grid.RowDefinitions>
-                        <WrapPanel Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center">
-                            <Label Content="Name: " Width="100"/>
-                            <TextBox x:Name="addname" Text="{Binding FBcustomername}" Width="300"/>
+                        <WrapPanel
+                            Grid.Row="0"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center">
+                            <Label Width="100" Content="Name: " />
+                            <TextBox
+                                x:Name="addname"
+                                Width="300"
+                                Text="{Binding FBcustomername}" />
                         </WrapPanel>
-                        <WrapPanel Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
-                            <Label Content="Phone: " Width="100"/>
-                            <TextBox x:Name="addsdt" Text="{Binding FBcustomerphone}" Width="300"/>
+                        <WrapPanel
+                            Grid.Row="1"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center">
+                            <Label Width="100" Content="Phone: " />
+                            <TextBox
+                                x:Name="addsdt"
+                                Width="300"
+                                Text="{Binding FBcustomerphone}" />
                         </WrapPanel>
-                        <WrapPanel Grid.Row="2" >
-                            <Label VerticalAlignment="Center" Content="Day: " Width="100"/>
-                            <DatePicker  x:Name="dp" VerticalAlignment="Center" SelectedDate="{Binding FBdateplay}"  Margin="0" materialDesign:HintAssist.Hint="Date play" Style="{StaticResource MaterialDesignFloatingHintDatePicker}" />
+                        <WrapPanel Grid.Row="2">
+                            <Label
+                                Width="100"
+                                VerticalAlignment="Center"
+                                Content="Day: " />
+                            <DatePicker
+                                x:Name="dp"
+                                Margin="0"
+                                VerticalAlignment="Center"
+                                materialDesign:HintAssist.Hint="Date play"
+                                SelectedDate="{Binding FBdateplay}"
+                                Style="{StaticResource MaterialDesignFloatingHintDatePicker}" />
                         </WrapPanel>
                         <WrapPanel Grid.Row="3">
-                            <Label Content="Start time:" Width="100"/>
-                            <materialDesign:TimePicker Is24Hours="True" SelectedTime="{Binding FBstarttime}"
-                        x:Name="startT_picker"
-    
-                                               
-                        HorizontalAlignment="Center"         
-                VerticalAlignment="Center"
-                                               
-                        materialDesign:HintAssist.Hint="Start time" 
-                        >
-                            </materialDesign:TimePicker>
+                            <Label Width="100" Content="Start time:" />
+                            <materialDesign:TimePicker
+                                x:Name="startT_picker"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                materialDesign:HintAssist.Hint="Start time"
+                                Is24Hours="True"
+                                SelectedTime="{Binding FBstarttime}" />
                         </WrapPanel>
-                        <WrapPanel Grid.Row="4" >
-                            <Label Content="End time:" Width="100"/>
-                            <materialDesign:TimePicker Is24Hours="True" SelectedTime="{Binding FBendtime}"
-                        x:Name="endT_picker"
-    
-                                               Height="30"
-                        HorizontalAlignment="Center"         
-                VerticalAlignment="Center"
-                                               
-                        materialDesign:HintAssist.Hint="End time" 
-                        >
-                            </materialDesign:TimePicker>
+                        <WrapPanel Grid.Row="4">
+                            <Label Width="100" Content="End time:" />
+                            <materialDesign:TimePicker
+                                x:Name="endT_picker"
+                                Height="30"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                materialDesign:HintAssist.Hint="End time"
+                                Is24Hours="True"
+                                SelectedTime="{Binding FBendtime}" />
                         </WrapPanel>
-                        <Grid Grid.Row="4" Margin="0,30,0,-54.6" Grid.RowSpan="2">
+                        <Grid
+                            Grid.Row="4"
+                            Grid.RowSpan="2"
+                            Margin="0,30,0,-54.6">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition></ColumnDefinition>
-                                <ColumnDefinition/>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
                             </Grid.ColumnDefinitions>
-                            <Button Command="{Binding FastbookingCommand}" Grid.Column="0"  HorizontalAlignment="Center"  materialDesign:ButtonAssist.CornerRadius="5" HorizontalContentAlignment="Stretch" VerticalAlignment="Center" Width="128">
-                                <TextBlock Margin="5 0 0 0" Text="Add" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                            <Button
+                                Grid.Column="0"
+                                Width="128"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                HorizontalContentAlignment="Stretch"
+                                materialDesign:ButtonAssist.CornerRadius="5"
+                                Command="{Binding FastbookingCommand}">
+                                <TextBlock
+                                    Margin="5,0,0,0"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Text="Add" />
                             </Button>
-                            <Button Click="Button_Click"  Command="{Binding CancelCommand}" Grid.Column="2"   HorizontalAlignment="Center"  materialDesign:ButtonAssist.CornerRadius="5"  HorizontalContentAlignment="Stretch" VerticalAlignment="Center" Width="128">
-                                <TextBlock Margin="5 0 0 0" Text="Cancel" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                            <Button
+                                Grid.Column="2"
+                                Width="128"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                HorizontalContentAlignment="Stretch"
+                                materialDesign:ButtonAssist.CornerRadius="5"
+                                Click="Button_Click"
+                                Command="{Binding CancelCommand}">
+                                <TextBlock
+                                    Margin="5,0,0,0"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Text="Cancel" />
                             </Button>
                         </Grid>
                     </Grid>
