--- a/InfoFieldBk.xaml
+++ b/InfoFieldBk.xaml
@@ -1,89 +1,136 @@
-﻿<Window x:Class="SportCenter.InfoFieldBk"
-          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SportCenter"
-        mc:Ignorable="d"
-        xmlns:uc="clr-namespace:SportCenter.UserControlKteam"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        TextElement.FontWeight="Regular"
-        TextElement.FontSize="13"
-        TextOptions.TextFormattingMode="Ideal"
-        TextOptions.TextRenderingMode="Auto"
-        Background="#FFEEE9FA"
-        FontFamily="{DynamicResource MaterialDesignFont}"
-        ResizeMode="NoResize"
-        WindowStyle="None"
-        DataContext="{StaticResource BasketballFieldVM}"
-        x:Name="InfoFiledSc"
-        Title="InfoFieldSc" Height="800" Width="1300">
+﻿<Window
+    x:Class="SportCenter.InfoFieldBk"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:SportCenter"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:uc="clr-namespace:SportCenter.UserControlKteam"
+    x:Name="InfoFiledSc"
+    Title="InfoFieldSc"
+    Width="1300"
+    Height="800"
+    Background="#FFEEE9FA"
+    DataContext="{StaticResource BasketballFieldVM}"
+    FontFamily="{DynamicResource MaterialDesignFont}"
+    ResizeMode="NoResize"
+    TextElement.FontSize="13"
+    TextElement.FontWeight="Regular"
+    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    TextOptions.TextFormattingMode="Ideal"
+    TextOptions.TextRenderingMode="Auto"
+    WindowStyle="None"
+    mc:Ignorable="d">
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="40"></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="40" />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
-            <uc:ControlBarUC Tag="{Binding Title, ElementName=mainWindow}" Grid.ColumnSpan="2"></uc:ControlBarUC>
+            <uc:ControlBarUC Grid.ColumnSpan="2" Tag="{Binding Title, ElementName=mainWindow}" />
         </Grid>
         <Grid Grid.Row="1">
-            <TextBlock Foreground="#8c9aa1" FontSize="20" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="TitleTxt"></TextBlock>
+            <TextBlock
+                x:Name="TitleTxt"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontSize="20"
+                FontWeight="Bold"
+                Foreground="#8c9aa1" />
         </Grid>
         <Grid Grid.Row="2">
             <Grid.RowDefinitions>
-                <RowDefinition Height="auto"></RowDefinition>
-                <RowDefinition Height="auto"></RowDefinition>
-                <RowDefinition></RowDefinition>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition />
             </Grid.RowDefinitions>
 
             <materialDesign:Card Grid.Row="0" Margin="5">
-                <WrapPanel Margin="0 0 0 10">
-                    <TextBox x:Name="txbIdfield" IsReadOnly="True" Margin="5 5 15 5" materialDesign:HintAssist.Hint="Id field" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
-                    <TextBox x:Name="txbCusName" Text="{Binding addcustomername, UpdateSourceTrigger=PropertyChanged}" Margin="5 5 15 5" materialDesign:HintAssist.Hint="Customer name" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
-                    <TextBox x:Name="txbCusPhone" Text="{Binding addcustomerphone, UpdateSourceTrigger=PropertyChanged}" Margin="5 5 15 5" materialDesign:HintAssist.Hint="Phone number" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
-                    <DatePicker x:Name="dp" VerticalAlignment="Center" SelectedDate="{Binding adddateplay}" Width="100" Margin="5 5 15 5" materialDesign:HintAssist.Hint="Date play" Style="{StaticResource MaterialDesignFloatingHintDatePicker}" />
-                    <materialDesign:TimePicker Is24Hours="True"
- SelectedTime="{Binding addstarttime}"
+                <WrapPanel Margin="0,0,0,10">
+                    <TextBox
+                        x:Name="txbIdfield"
+                        Margin="5,5,15,5"
+                        materialDesign:HintAssist.Hint="Id field"
+                        IsReadOnly="True"
+                        Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
+                    <TextBox
+                        x:Name="txbCusName"
+                        Margin="5,5,15,5"
+                        materialDesign:HintAssist.Hint="Customer name"
+                        Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                        Text="{Binding addcustomername, UpdateSourceTrigger=PropertyChanged}" />
+                    <TextBox
+                        x:Name="txbCusPhone"
+                        Margin="5,5,15,5"
+                        materialDesign:HintAssist.Hint="Phone number"
+                        Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                        Text="{Binding addcustomerphone, UpdateSourceTrigger=PropertyChanged}" />
+                    <DatePicker
+                        x:Name="dp"
+                        Width="100"
+                        Margin="5,5,15,5"
+                        VerticalAlignment="Center"
+                        materialDesign:HintAssist.Hint="Date play"
+                        SelectedDate="{Binding adddateplay}"
+                        Style="{StaticResource MaterialDesignFloatingHintDatePicker}" />
+                    <materialDesign:TimePicker
                         x:Name="startT_picker"
                         Margin="20,9,5,0"
-                        HorizontalAlignment="Center"         
-                VerticalAlignment="Center"
-                        materialDesign:HintAssist.Hint="Start time" 
-                        ></materialDesign:TimePicker>
-                    <materialDesign:TimePicker Is24Hours="True"
- SelectedTime="{Binding addendtime}"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        materialDesign:HintAssist.Hint="Start time"
+                        Is24Hours="True"
+                        SelectedTime="{Binding addstarttime}" />
+                    <materialDesign:TimePicker
                         x:Name="endT_picker"
-                        HorizontalAlignment="Center"         
-                VerticalAlignment="Center"
                         Margin="10,9,0,0"
-                        materialDesign:HintAssist.Hint="End time" 
-                        ></materialDesign:TimePicker>
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        materialDesign:HintAssist.Hint="End time"
+                        Is24Hours="True"
+                        SelectedTime="{Binding addendtime}" />
                 </WrapPanel>
             </materialDesign:Card>
 
             <materialDesign:Card Grid.Row="1" Margin="5">
                 <WrapPanel>
-                    <Button Command="{Binding AddBookingCommand}" Content="Thêm" Margin="20" Width="100" Click="Button_Add" ></Button>
-                    <Button Command="{Binding EditBookingCommand}" Content="Sửa" Margin="20" Width="100"></Button>
-                    <Button Command="{Binding DeleteBookingCommand}" Content="Xóa" Margin="20" Width="100"></Button>
+                    <Button
+                        Width="100"
+                        Margin="20"
+                        Click="Button_Add"
+                        Command="{Binding AddBookingCommand}"
+                        Content="Thêm" />
+                    <Button
+                        Width="100"
+                        Margin="20"
+                        Command="{Binding EditBookingCommand}"
+                        Content="Sửa" />
+                    <Button
+                        Width="100"
+                        Margin="20"
+                        Command="{Binding DeleteBookingCommand}"
+                        Content="Xóa" />
                 </WrapPanel>
             </materialDesign:Card>
 
-            <materialDesign:Card Grid.Row="2" Margin="5" VerticalAlignment="Stretch">
+            <materialDesign:Card
+                Grid.Row="2"
+                Margin="5"
+                VerticalAlignment="Stretch">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
-                    <ListView  ItemsSource="{Binding list_with_id}" SelectedItem="{Binding SelectedItemBooking, Mode=OneWayToSource}">
+                    <ListView ItemsSource="{Binding list_with_id}" SelectedItem="{Binding SelectedItemBooking, Mode=OneWayToSource}">
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn Header="Id" DisplayMemberBinding="{Binding id}"></GridViewColumn>
-                                <GridViewColumn Header="Customer name" DisplayMemberBinding="{Binding Customer_name}"></GridViewColumn>
-                                <GridViewColumn Header="Customer phone number" DisplayMemberBinding="{Binding Customer_PhoneNum}"></GridViewColumn>
-                                <GridViewColumn Header="Date play" DisplayMemberBinding="{Binding datePlay, StringFormat='dd/MM/yyyy'}"></GridViewColumn>
-                                <GridViewColumn Header="Start time" DisplayMemberBinding="{Binding start_time, StringFormat='HH:mm'}"></GridViewColumn>
-                                <GridViewColumn Header="End time" DisplayMemberBinding="{Binding end_time, StringFormat='HH:mm'}"></GridViewColumn>
-                                <GridViewColumn Header="Status" DisplayMemberBinding="{Binding Status}"></GridViewColumn>
+                                <GridViewColumn DisplayMemberBinding="{Binding id}" Header="Id" />
+                                <GridViewColumn DisplayMemberBinding="{Binding Customer_name}" Header="Customer name" />
+                                <GridViewColumn DisplayMemberBinding="{Binding Customer_PhoneNum}" Header="Customer phone number" />
+                                <GridViewColumn DisplayMemberBinding="{Binding datePlay, StringFormat='dd/MM/yyyy'}" Header="Date play" />
+                                <GridViewColumn DisplayMemberBinding="{Binding start_time, StringFormat='HH:mm'}" Header="Start time" />
+                                <GridViewColumn DisplayMemberBinding="{Binding end_time, StringFormat='HH:mm'}" Header="End time" />
+                                <GridViewColumn DisplayMemberBinding="{Binding Status}" Header="Status" />
                             </GridView>
                         </ListView.View>
                     </ListView>
