--- a/LoginWindow.xaml
+++ b/LoginWindow.xaml
@@ -1,74 +1,121 @@
-﻿<Window x:Class="SportCenter.LoginWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SportCenter"
-        mc:Ignorable="d"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:uc="clr-namespace:SportCenter.UserControlKteam" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-        Title="Login" Height="450" Width="350" 
-        ResizeMode="NoResize" 
-        WindowStartupLocation="CenterScreen" 
-        WindowStyle="None" 
-        Name="loginWindow"
-        DataContext="{StaticResource LoginVM}"
-        FontFamily="Segoe UI Emoji">
+﻿<Window
+    x:Class="SportCenter.LoginWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+    xmlns:local="clr-namespace:SportCenter"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:uc="clr-namespace:SportCenter.UserControlKteam"
+    Name="loginWindow"
+    Title="Login"
+    Width="350"
+    Height="450"
+    DataContext="{StaticResource LoginVM}"
+    FontFamily="Segoe UI Emoji"
+    ResizeMode="NoResize"
+    WindowStartupLocation="CenterScreen"
+    WindowStyle="None"
+    mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="auto" />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
-            <uc:ControlBarUC Tag="{Binding Title, ElementName=loginWindow}"></uc:ControlBarUC>
+            <uc:ControlBarUC Tag="{Binding Title, ElementName=loginWindow}" />
         </Grid>
         <Grid Grid.Row="1">
 
             <Rectangle Height="230" VerticalAlignment="Top">
                 <Rectangle.Fill>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="#a04cbc"/>
-                        <GradientStop Color="#FF34268A" Offset="1"/>
-                        <GradientStop Color="#FF33288B" Offset="0.546"/>
+                    <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                        <GradientStop Color="#a04cbc" />
+                        <GradientStop Offset="1" Color="#FF34268A" />
+                        <GradientStop Offset="0.546" Color="#FF33288B" />
                     </LinearGradientBrush>
                 </Rectangle.Fill>
             </Rectangle>
 
-            <Rectangle Width="280" Height="240" VerticalAlignment="Bottom" Margin="0,80" RadiusY="10" RadiusX="10" Fill="White">
+            <Rectangle
+                Width="280"
+                Height="240"
+                Margin="0,80"
+                VerticalAlignment="Bottom"
+                Fill="White"
+                RadiusX="10"
+                RadiusY="10">
                 <Rectangle.Effect>
-                    <DropShadowEffect BlurRadius="15" Direction="0" RenderingBias="Quality" ShadowDepth="1" Color="#FFBBBBBB"/>
+                    <DropShadowEffect
+                        BlurRadius="15"
+                        Direction="0"
+                        RenderingBias="Quality"
+                        ShadowDepth="1"
+                        Color="#FFBBBBBB" />
                 </Rectangle.Effect>
             </Rectangle>
-            <Grid VerticalAlignment="Bottom" Margin="35,80" Height="240">
-                <Label Content="LOGIN" HorizontalAlignment="Center" FontWeight="Bold" VerticalAlignment="Top" Margin="5" Foreground="Gray" FontSize="18"/>
-                <StackPanel VerticalAlignment="Center" Margin="15">
-                    <TextBox Margin="0,10" Text="{Binding UserName}" materialDesign:HintAssist.Hint="Username" Style="{StaticResource MaterialDesignFloatingHintTextBox}" FontFamily="Champagne &amp; Limousines" FontSize="18"/>
-                    <PasswordBox Name="FloatingPasswordBox" Margin="0,10" materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" FontFamily="Champagne &amp; Limousines" FontSize="18">
+            <Grid
+                Height="240"
+                Margin="35,80"
+                VerticalAlignment="Bottom">
+                <Label
+                    Margin="5"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top"
+                    Content="LOGIN"
+                    FontSize="18"
+                    FontWeight="Bold"
+                    Foreground="Gray" />
+                <StackPanel Margin="15" VerticalAlignment="Center">
+                    <TextBox
+                        Margin="0,10"
+                        materialDesign:HintAssist.Hint="Username"
+                        FontFamily="Champagne &amp; Limousines"
+                        FontSize="18"
+                        Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                        Text="{Binding UserName}" />
+                    <PasswordBox
+                        Name="FloatingPasswordBox"
+                        Margin="0,10"
+                        materialDesign:HintAssist.Hint="Password"
+                        FontFamily="Champagne &amp; Limousines"
+                        FontSize="18"
+                        Style="{StaticResource MaterialDesignFloatingHintPasswordBox}">
                         <i:Interaction.Triggers>
                             <i:EventTrigger EventName="PasswordChanged">
-                                <i:InvokeCommandAction Command="{Binding PasswordChangedCommand}" 
-                                                       CommandParameter="{Binding ElementName=FloatingPasswordBox}"/>
+                                <i:InvokeCommandAction Command="{Binding PasswordChangedCommand}" CommandParameter="{Binding ElementName=FloatingPasswordBox}" />
                             </i:EventTrigger>
                         </i:Interaction.Triggers>
                     </PasswordBox>
                 </StackPanel>
             </Grid>
-            <Button 
-                            Width="150"
+            <Button
+                Width="150"
+                Margin="100,0,100.4,69.8"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Bottom"
-                            Command="{Binding LoginCommand}"
-                            CommandParameter="{Binding ElementName=loginWindow}"
-                            Style="{StaticResource MaterialDesignRaisedButton}"
-                            materialDesign:ButtonProgressAssist.Value="-1"
-                            materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"
-                            materialDesign:ButtonProgressAssist.IsIndeterminate="True"
-               
-    Content="LOGIN"
-                             IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" 
-    Margin="100,0,100.4,69.8"></Button>
-            <TextBlock Text="SINCE 2021" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="30" Foreground="Gray" Cursor="Hand"/>
-            <Image Source="Image/Screenshot 2022-01-03 175325_ccexpress.png" Height="170" VerticalAlignment="Top" Margin="125,10,100.4,0" RenderTransformOrigin="0.553,0.288"/>
+                materialDesign:ButtonProgressAssist.IsIndeterminate="True"
+                materialDesign:ButtonProgressAssist.IsIndicatorVisible="True"
+                materialDesign:ButtonProgressAssist.Value="-1"
+                Command="{Binding LoginCommand}"
+                CommandParameter="{Binding ElementName=loginWindow}"
+                Content="LOGIN"
+                IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
+                Style="{StaticResource MaterialDesignRaisedButton}" />
+            <TextBlock
+                Margin="30"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                Cursor="Hand"
+                Foreground="Gray"
+                Text="SINCE 2021" />
+            <Image
+                Height="170"
+                Margin="125,10,100.4,0"
+                VerticalAlignment="Top"
+                RenderTransformOrigin="0.553,0.288"
+                Source="Image/Screenshot 2022-01-03 175325_ccexpress.png" />
         </Grid>
     </Grid>
 </Window>
