--- a/ProductDetailsControl.xaml
+++ b/ProductDetailsControl.xaml
@@ -1,92 +1,102 @@
-﻿<UserControl 
-    x:Name="ucDetail" 
+﻿<UserControl
     x:Class="SportCenter.ProductDetailsControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:local="clr-namespace:SportCenter"
-        
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
-    mc:Ignorable="d" 
-   
-    
-    Width="auto" 
-    Height="auto" 
-    Margin="0,20,0,10">
-    <Grid 
-        Background="White">
+    xmlns:local="clr-namespace:SportCenter"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    x:Name="ucDetail"
+    Width="auto"
+    Height="auto"
+    Margin="0,20,0,10"
+    mc:Ignorable="d">
+    <Grid Background="White">
         <Grid.ColumnDefinitions>
 
-            <ColumnDefinition Width="1.75*"></ColumnDefinition>
-            <ColumnDefinition Width="0.75*"></ColumnDefinition>
-            <ColumnDefinition Width="0.75*"></ColumnDefinition>
-            <ColumnDefinition Width="0.75*"></ColumnDefinition>
-            <ColumnDefinition Width="1.5*"></ColumnDefinition>
-            <ColumnDefinition Width="40"></ColumnDefinition>
+            <ColumnDefinition Width="1.75*" />
+            <ColumnDefinition Width="0.75*" />
+            <ColumnDefinition Width="0.75*" />
+            <ColumnDefinition Width="0.75*" />
+            <ColumnDefinition Width="1.5*" />
+            <ColumnDefinition Width="40" />
         </Grid.ColumnDefinitions>
-        
-        
-        
-        
-        <TextBlock  
-            x:Name="txbName" 
-            Text="{Binding good.name}" 
-            TextTrimming="WordEllipsis"
-            Grid.Column="0" 
-            HorizontalAlignment="Left" 
-            Margin="10,0,0,0" 
-            TextWrapping="Wrap" 
-            VerticalAlignment="Center" 
+
+
+
+
+        <TextBlock
+            x:Name="txbName"
+            Grid.Column="0"
+            Margin="10,0,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
             FontSize="15"
             FontWeight="SemiBold"
-            />
-        <Button Height="auto" Width="auto" FontSize="20" Grid.Column="1" Content="-" 
-                Command="{Binding Path=DataContext.MinusCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}}" CommandParameter="{Binding}"/>
-        <Border BorderThickness="1" CornerRadius="3" Grid.Column="2" BorderBrush="Black" Margin="4">
-            <TextBlock 
-            x:Name="tb_main"
-            Margin="0 "
-            FontSize="16" TextWrapping="Wrap" 
-            
-                 
-                    HorizontalAlignment="Center" 
-                    VerticalAlignment="Center" 
+            Text="{Binding good.name}"
+            TextTrimming="WordEllipsis"
+            TextWrapping="Wrap" />
+        <Button
+            Grid.Column="1"
+            Width="auto"
+            Height="auto"
+            Command="{Binding Path=DataContext.MinusCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}}"
+            CommandParameter="{Binding}"
+            Content="-"
+            FontSize="20" />
+        <Border
+            Grid.Column="2"
+            Margin="4"
+            BorderBrush="Black"
+            BorderThickness="1"
+            CornerRadius="3">
+            <TextBlock
+                x:Name="tb_main"
+                Margin="0"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontSize="16"
+                FontWeight="SemiBold"
                 PreviewTextInput="tb_main_PreviewTextInput"
-            FontWeight="SemiBold"  Text="{Binding quantity}" 
-                />
+                Text="{Binding quantity}"
+                TextWrapping="Wrap" />
         </Border>
-        <Button Height="auto" Width="auto" Grid.Column="3" Content="+" 
-                Command="{Binding Path=DataContext.PlusCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}}" CommandParameter="{Binding}"/>
-        <TextBlock 
-            x:Name="txbPrice" 
-            Text="{Binding orderprice, StringFormat= {}{0:N0} }" 
-            Grid.Column="4" 
-            HorizontalAlignment="Right" 
-            Margin="0,0,0,0" 
-            TextWrapping="Wrap" 
-            VerticalAlignment="Center" 
+        <Button
+            Grid.Column="3"
+            Width="auto"
+            Height="auto"
+            Command="{Binding Path=DataContext.PlusCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}}"
+            CommandParameter="{Binding}"
+            Content="+" />
+        <TextBlock
+            x:Name="txbPrice"
+            Grid.Column="4"
+            Margin="0,0,0,0"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Center"
             FontSize="16"
-            FontWeight="SemiBold"/>
-        
+            FontWeight="SemiBold"
+            Text="{Binding orderprice, StringFormat={}{0:N0}}"
+            TextWrapping="Wrap" />
+
         <Button
             Grid.Column="5"
-            Height="26" 
-            Margin="0" 
-            Width="24" 
-            Command="{Binding Path=DataContext.DelbuyingCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}}" CommandParameter="{Binding}"
-            
-            Background="{x:Null}" 
-            BorderBrush="{x:Null}" 
-            Padding="0">
-            <materialDesign:PackIcon 
-                Kind="DeleteOutline" 
-                Height="24"
+            Width="24"
+            Height="26"
+            Margin="0"
+            Padding="0"
+            Background="{x:Null}"
+            BorderBrush="{x:Null}"
+            Command="{Binding Path=DataContext.DelbuyingCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}}"
+            CommandParameter="{Binding}">
+            <materialDesign:PackIcon
                 Width="24"
-                Foreground="Red" 
-                HorizontalAlignment="Left" 
-                VerticalAlignment="Center" />
+                Height="24"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                Foreground="Red"
+                Kind="DeleteOutline" />
         </Button>
     </Grid>
 </UserControl>
