--- a/SellGoodsControl.xaml
+++ b/SellGoodsControl.xaml
@@ -1,119 +1,119 @@
-﻿<UserControl 
-    x:Name="ucSellGood" 
+﻿<UserControl
     x:Class="SportCenter.SellGoodsControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-    xmlns:local="clr-namespace:SportCenter"  
-    xmlns:y="clr-namespace:SportCenter" xmlns:model="clr-namespace:SportCenter.Model" 
-   
-    mc:Ignorable="d" 
-    d:DesignHeight="450" 
-    d:DesignWidth="800" 
-    Width="180" 
-    Height="200" 
+    xmlns:local="clr-namespace:SportCenter"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:model="clr-namespace:SportCenter.Model"
+    xmlns:y="clr-namespace:SportCenter"
+    x:Name="ucSellGood"
+    Width="180"
+    Height="200"
     Margin="15"
-    
-    Cursor="Hand">
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    Cursor="Hand"
+    mc:Ignorable="d">
 
 
-    
-    <i:Interaction.Triggers >
-        <i:EventTrigger  EventName="MouseDown">
-            <i:InvokeCommandAction 
-                Command="{Binding Path=DataContext.AddbuyingCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}}" CommandParameter="{Binding}" 
-                                   />
+
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="MouseDown">
+            <i:InvokeCommandAction Command="{Binding Path=DataContext.AddbuyingCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}}" CommandParameter="{Binding}" />
         </i:EventTrigger>
     </i:Interaction.Triggers>
-   
-        <Border
-            
-        
-        Background="white" 
+
+    <Border
+        Width="180"
+        Height="200"
+        Background="white"
         BorderBrush="white"
-        Width="180" 
-        Height="200" 
-        BorderThickness="1" 
+        BorderThickness="1"
         CornerRadius="4">
         <Border.Effect>
-            <DropShadowEffect Color="#FFD8AFF4" BlurRadius="30" ShadowDepth="0"/>
+            <DropShadowEffect
+                BlurRadius="30"
+                ShadowDepth="0"
+                Color="#FFD8AFF4" />
         </Border.Effect>
-        <Grid Cursor="Hand" >
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="130"></RowDefinition>
-                    <RowDefinition Height="40"></RowDefinition>
-                    <RowDefinition Height="30"></RowDefinition>
-                </Grid.RowDefinitions>
+        <Grid Cursor="Hand">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="130" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="30" />
+            </Grid.RowDefinitions>
 
-                <TextBlock 
-                x:Name="txbId" 
-                Visibility="Hidden"
-                HorizontalAlignment="Left"
-                TextWrapping="Wrap" 
-                VerticalAlignment="Top" 
+            <TextBlock
+                x:Name="txbId"
+                Width="0"
                 Height="0"
-                Width="0"/>
-                <TextBlock 
-                x:Name="txbIdBill" 
-                Visibility="Hidden"
                 HorizontalAlignment="Left"
-                TextWrapping="Wrap" 
-                VerticalAlignment="Top" 
-                Height="0" 
-                Width="0"/>
-                <Image x:Name="imgGood" 
-                       Source="{Binding imageFile}"
+                VerticalAlignment="Top"
+                TextWrapping="Wrap"
+                Visibility="Hidden" />
+            <TextBlock
+                x:Name="txbIdBill"
+                Width="0"
+                Height="0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                TextWrapping="Wrap"
+                Visibility="Hidden" />
+            <Image
+                x:Name="imgGood"
                 Grid.Row="0"
-                HorizontalAlignment="Center" 
-                VerticalAlignment="Top" 
-                Margin="0,10,0,0"/>
-                <ItemsControl >
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock x:Name="txbName" 
-                
-                TextTrimming="WordEllipsis" 
-                HorizontalAlignment="Center" 
-                Margin="10,0" 
-                TextWrapping="Wrap"
-                Grid.Row="1" 
-                Foreground="black" 
-                FontSize="14"
-                VerticalAlignment="Center" 
-                TextAlignment="Center"/>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-                <TextBlock x:Name="txbName" 
-                Text="{Binding name}" 
-                TextTrimming="WordEllipsis" 
-                HorizontalAlignment="Center" 
-                Margin="10,0" 
-                TextWrapping="Wrap"
-                Grid.Row="1" 
-                Foreground="black" 
-                FontSize="14"
-                VerticalAlignment="Center" 
-                TextAlignment="Center"/>
-                <TextBlock 
-                Name="txbPrice"
-                Text="{Binding price, StringFormat= {}{0:N0}}" 
-                TextTrimming="WordEllipsis" 
+                Margin="0,10,0,0"
                 HorizontalAlignment="Center"
-                Margin="20,5,20,0" 
-                Grid.Row="2" 
-                TextWrapping="Wrap"
-                VerticalAlignment="Top" 
-                FontSize="14" 
-                FontWeight="SemiBold" 
-                Foreground="blue"/>
+                VerticalAlignment="Top"
+                Source="{Binding imageFile}" />
+            <ItemsControl>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock
+                            x:Name="txbName"
+                            Grid.Row="1"
+                            Margin="10,0"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            FontSize="14"
+                            Foreground="black"
+                            TextAlignment="Center"
+                            TextTrimming="WordEllipsis"
+                            TextWrapping="Wrap" />
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+            <TextBlock
+                x:Name="txbName"
+                Grid.Row="1"
+                Margin="10,0"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                FontSize="14"
+                Foreground="black"
+                Text="{Binding name}"
+                TextAlignment="Center"
+                TextTrimming="WordEllipsis"
+                TextWrapping="Wrap" />
+            <TextBlock
+                Name="txbPrice"
+                Grid.Row="2"
+                Margin="20,5,20,0"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Top"
+                FontSize="14"
+                FontWeight="SemiBold"
+                Foreground="blue"
+                Text="{Binding price, StringFormat={}{0:N0}}"
+                TextTrimming="WordEllipsis"
+                TextWrapping="Wrap" />
 
 
-            </Grid>
-        </Border>
-    
-    
-   
+        </Grid>
+    </Border>
+
+
+
 </UserControl>
