--- a/SoccerField.xaml
+++ b/SoccerField.xaml
@@ -1,82 +1,153 @@
-﻿<Window x:Class="SportCenter.SoccerField"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SportCenter"
-        mc:Ignorable="d"
-         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-        
-        xmlns:uc="clr-namespace:SportCenter.UserControlKteam"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-     TextElement.FontWeight="Regular"
-     TextElement.FontSize="13"
-     TextOptions.TextFormattingMode="Ideal"
-     TextOptions.TextRenderingMode="Auto"
-        Background="#222831"
-     FontFamily="{DynamicResource MaterialDesignFont}"
-        ResizeMode="NoResize"
-        WindowStyle="None"
-        WindowStartupLocation="CenterScreen"
-        
-        x:Name="SoccerFieldWindow"
-        DataContext="{StaticResource SoccerFieldVM}"
-        Title="Phoenix Sport Center Managament" Height="500" Width="550">
+﻿<Window
+    x:Class="SportCenter.SoccerField"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+    xmlns:local="clr-namespace:SportCenter"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:uc="clr-namespace:SportCenter.UserControlKteam"
+    x:Name="SoccerFieldWindow"
+    Title="Phoenix Sport Center Managament"
+    Width="550"
+    Height="500"
+    Background="#222831"
+    DataContext="{StaticResource SoccerFieldVM}"
+    FontFamily="{DynamicResource MaterialDesignFont}"
+    ResizeMode="NoResize"
+    TextElement.FontSize="13"
+    TextElement.FontWeight="Regular"
+    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    TextOptions.TextFormattingMode="Ideal"
+    TextOptions.TextRenderingMode="Auto"
+    WindowStartupLocation="CenterScreen"
+    WindowStyle="None"
+    mc:Ignorable="d">
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
-            <i:InvokeCommandAction Command="{Binding LoadedWindowCommand}"/>
+            <i:InvokeCommandAction Command="{Binding LoadedWindowCommand}" />
         </i:EventTrigger>
     </i:Interaction.Triggers>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="40"/>
-            <RowDefinition Height="50"></RowDefinition>
-            <RowDefinition Height="70"></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="40" />
+            <RowDefinition Height="50" />
+            <RowDefinition Height="70" />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
-            <uc:ControlBarUC Tag="{Binding Title, ElementName=ChooseSportWindow}" Height="32"  VerticalAlignment="Top"></uc:ControlBarUC>
+            <uc:ControlBarUC
+                Height="32"
+                VerticalAlignment="Top"
+                Tag="{Binding Title, ElementName=ChooseSportWindow}" />
         </Grid>
-        <TextBlock Grid.Row="1" FontWeight="ExtraBold" Foreground="LightYellow" FontFamily="Bungee Inline" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center"  ><Run Text="SOCCER"/></TextBlock>
+        <TextBlock
+            Grid.Row="1"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            FontFamily="Bungee Inline"
+            FontSize="30"
+            FontWeight="ExtraBold"
+            Foreground="LightYellow"><Run Text="SOCCER" /></TextBlock>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"></ColumnDefinition>
-                <ColumnDefinition Width="1*"></ColumnDefinition>
-                <ColumnDefinition Width="1*"></ColumnDefinition>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" Background="#00ADB5" Command="{Binding ShowAddCommand}" HorizontalAlignment="Center"  materialDesign:ButtonAssist.CornerRadius="5"  HorizontalContentAlignment="Stretch" VerticalAlignment="Center" Width="128">
+            <Button
+                Grid.Column="0"
+                Width="128"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Stretch"
+                materialDesign:ButtonAssist.CornerRadius="5"
+                Background="#00ADB5"
+                Command="{Binding ShowAddCommand}">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="3*" />
                     </Grid.ColumnDefinitions>
-                    <materialDesign:PackIcon Grid.Column="0" Kind="Add" VerticalAlignment="Center" HorizontalAlignment="Center" Width="Auto" Height="Auto"/>
-                    <TextBlock Grid.Column="1" Margin="5 0 0 0" Text="Add" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <materialDesign:PackIcon
+                        Grid.Column="0"
+                        Width="Auto"
+                        Height="Auto"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Kind="Add" />
+                    <TextBlock
+                        Grid.Column="1"
+                        Margin="5,0,0,0"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Text="Add" />
                 </Grid>
             </Button>
-            <Button Grid.Column="1" Background="#00ADB5" Command="{Binding ShowEditFieldCommand}"  HorizontalAlignment="Left"  materialDesign:ButtonAssist.CornerRadius="5" HorizontalContentAlignment="Stretch" VerticalAlignment="Center" Width="128">
+            <Button
+                Grid.Column="1"
+                Width="128"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Stretch"
+                materialDesign:ButtonAssist.CornerRadius="5"
+                Background="#00ADB5"
+                Command="{Binding ShowEditFieldCommand}">
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="5*"/>
-                        <RowDefinition Height="3*"/>
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="3*" />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="3*" />
                     </Grid.ColumnDefinitions>
-                    <materialDesign:PackIcon Grid.Column="0" Kind="Adjust" VerticalAlignment="Center" HorizontalAlignment="Center" Width="Auto" Height="Auto" Grid.ColumnSpan="2" Margin="0,0,72,-0.369" Grid.RowSpan="2"/>
-                    <TextBlock Grid.Column="1"  Text="Adjust" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.RowSpan="2"/>
+                    <materialDesign:PackIcon
+                        Grid.RowSpan="2"
+                        Grid.Column="0"
+                        Grid.ColumnSpan="2"
+                        Width="Auto"
+                        Height="Auto"
+                        Margin="0,0,72,-0.369"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Kind="Adjust" />
+                    <TextBlock
+                        Grid.RowSpan="2"
+                        Grid.Column="1"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Text="Adjust" />
                 </Grid>
             </Button>
-            <Button Grid.Column="3" Background="#00ADB5" Command="{Binding FastBookingCommand}" HorizontalAlignment="Center"  materialDesign:ButtonAssist.CornerRadius="5"  HorizontalContentAlignment="Stretch" VerticalAlignment="Center" Width="150">
+            <Button
+                Grid.Column="3"
+                Width="150"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Stretch"
+                materialDesign:ButtonAssist.CornerRadius="5"
+                Background="#00ADB5"
+                Command="{Binding FastBookingCommand}">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="3*" />
                     </Grid.ColumnDefinitions>
-                    <materialDesign:PackIcon Grid.Column="0" Kind="FastForward" VerticalAlignment="Center" HorizontalAlignment="Center" Width="Auto" Height="Auto"/>
-                    <TextBlock Grid.Column="1" Margin="5 0 0 0" Text="Fast booking" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    <materialDesign:PackIcon
+                        Grid.Column="0"
+                        Width="Auto"
+                        Height="Auto"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Kind="FastForward" />
+                    <TextBlock
+                        Grid.Column="1"
+                        Margin="5,0,0,0"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Text="Fast booking" />
                 </Grid>
             </Button>
         </Grid>
@@ -86,12 +157,12 @@
 
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <uc:SoccerFieldControl></uc:SoccerFieldControl>
+                            <uc:SoccerFieldControl />
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                     <ItemsControl.Template>
                         <ControlTemplate>
-                            <ItemsPresenter/>
+                            <ItemsPresenter />
                         </ControlTemplate>
                     </ItemsControl.Template>
                 </ItemsControl>
