--- a/UserControlKteam/ControlBarUC.xaml
+++ b/UserControlKteam/ControlBarUC.xaml
@@ -1,55 +1,65 @@
-﻿<UserControl x:Class="SportCenter.UserControlKteam.ControlBarUC"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SportCenter.UserControlKteam"
-             
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"             
-             
-             
-             Name="ucControlBar"
-             mc:Ignorable="d">
+﻿<UserControl
+    x:Class="SportCenter.UserControlKteam.ControlBarUC"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+    xmlns:local="clr-namespace:SportCenter.UserControlKteam"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Name="ucControlBar"
+    mc:Ignorable="d">
 
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="MouseLeftButtonDown">
-            <i:InvokeCommandAction Command="{Binding MouseMoveWindowCommand}" CommandParameter="{Binding ElementName=ucControlBar}"/>
+            <i:InvokeCommandAction Command="{Binding MouseMoveWindowCommand}" CommandParameter="{Binding ElementName=ucControlBar}" />
         </i:EventTrigger>
     </i:Interaction.Triggers>
     <Grid>
-        <materialDesign:ColorZone Mode="PrimaryMid" >
+        <materialDesign:ColorZone Mode="PrimaryMid">
             <DockPanel>
-                <StackPanel DockPanel.Dock="Right"  Background="Transparent" Orientation="Horizontal">
+                <StackPanel
+                    Background="Transparent"
+                    DockPanel.Dock="Right"
+                    Orientation="Horizontal">
                     <StackPanel.Resources>
                         <Style TargetType="Button">
-                            <Setter Property="Margin" Value="2 4 2 4"></Setter>
-                            <Setter Property="Width" Value="40"></Setter>
+                            <Setter Property="Margin" Value="2,4,2,4" />
+                            <Setter Property="Width" Value="40" />
                         </Style>
                     </StackPanel.Resources>
-                    <Button Command="{Binding MinimizeWindowCommand}" 
-                            CommandParameter="{Binding ElementName=ucControlBar}"
-                            Style="{StaticResource MaterialDesignFlatDarkButton}"
-                        ToolTip="Đóng" ToolBar.OverflowMode="AsNeeded" >
+                    <Button
+                        Command="{Binding MinimizeWindowCommand}"
+                        CommandParameter="{Binding ElementName=ucControlBar}"
+                        Style="{StaticResource MaterialDesignFlatDarkButton}"
+                        ToolBar.OverflowMode="AsNeeded"
+                        ToolTip="Đóng">
                         <materialDesign:PackIcon Kind="WindowMinimize" />
                     </Button>
-                    <Button Command="{Binding MaximizeWindowCommand}" 
-                            Style="{StaticResource MaterialDesignFlatDarkButton}"
-                            CommandParameter="{Binding ElementName=ucControlBar}"
-                        ToolTip="Đóng" ToolBar.OverflowMode="AsNeeded" >
+                    <Button
+                        Command="{Binding MaximizeWindowCommand}"
+                        CommandParameter="{Binding ElementName=ucControlBar}"
+                        Style="{StaticResource MaterialDesignFlatDarkButton}"
+                        ToolBar.OverflowMode="AsNeeded"
+                        ToolTip="Đóng">
                         <materialDesign:PackIcon Kind="WindowMaximize" />
                     </Button>
-                    <Button Command="{Binding CloseWindowCommand}" 
-                            Style="{StaticResource MaterialDesignFlatDarkButton}"
-                            CommandParameter="{Binding ElementName=ucControlBar}"
-                            ToolTip="Đóng" ToolBar.OverflowMode="AsNeeded">
+                    <Button
+                        Command="{Binding CloseWindowCommand}"
+                        CommandParameter="{Binding ElementName=ucControlBar}"
+                        Style="{StaticResource MaterialDesignFlatDarkButton}"
+                        ToolBar.OverflowMode="AsNeeded"
+                        ToolTip="Đóng">
                         <materialDesign:PackIcon Kind="WindowClose" />
                     </Button>
                 </StackPanel>
 
                 <StackPanel DockPanel.Dock="Left" Orientation="Horizontal">
                     <ToggleButton Style="{DynamicResource MaterialDesignHamburgerToggleButton}" />
-                    <TextBlock VerticalAlignment="Center" Margin="16 0 0 0" Text="{Binding Tag, ElementName=ucControlBar}"></TextBlock>
+                    <TextBlock
+                        Margin="16,0,0,0"
+                        VerticalAlignment="Center"
+                        Text="{Binding Tag, ElementName=ucControlBar}" />
                 </StackPanel>
             </DockPanel>
         </materialDesign:ColorZone>
