--- a/UserControlKteam/Expander_Bill.xaml
+++ b/UserControlKteam/Expander_Bill.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="SportCenter.UserControlKteam.Expander_Bill"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SportCenter.UserControlKteam"
-             mc:Ignorable="d" 
-             Background="LightGray"
-             d:DesignHeight="150" d:DesignWidth="500">
-    <Grid>
-        
-    </Grid>
+﻿<UserControl
+    x:Class="SportCenter.UserControlKteam.Expander_Bill"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:SportCenter.UserControlKteam"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="150"
+    d:DesignWidth="500"
+    Background="LightGray"
+    mc:Ignorable="d">
+    <Grid />
 </UserControl>
