--- a/UserControlKteam/VolleyballFieldControl.xaml
+++ b/UserControlKteam/VolleyballFieldControl.xaml
@@ -1,64 +1,104 @@
-﻿<UserControl x:Class="SportCenter.UserControlKteam.VolleyballFieldControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SportCenter.UserControlKteam"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             mc:Ignorable="d">
+﻿<UserControl
+    x:Class="SportCenter.UserControlKteam.VolleyballFieldControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:SportCenter.UserControlKteam"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d">
     <Grid>
-        <Button Background="#00ADB5" Width="400" Style="{StaticResource MaterialDesignRaisedDarkButton}" Height="150" Margin="10 10 10 10" Command="{Binding Path=DataContext.ShowInfofieldCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}}"  CommandParameter="{Binding}">
-            <materialDesign:Card Foreground="#393E46" Grid.Row="0"  Width="350" Padding="8" UniformCornerRadius="5" Height="150" Margin="10, 10, 10, 10"  HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Button
+            Width="400"
+            Height="150"
+            Margin="10,10,10,10"
+            Background="#00ADB5"
+            Command="{Binding Path=DataContext.ShowInfofieldCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}}"
+            CommandParameter="{Binding}"
+            Style="{StaticResource MaterialDesignRaisedDarkButton}">
+            <materialDesign:Card
+                Grid.Row="0"
+                Width="350"
+                Height="150"
+                Margin="10,10,10,10"
+                Padding="8"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Foreground="#393E46"
+                UniformCornerRadius="5">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="4*"/>
-                        <ColumnDefinition Width="1*"></ColumnDefinition>
+                        <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="4*" />
+                        <ColumnDefinition Width="1*" />
                     </Grid.ColumnDefinitions>
                     <Grid Grid.Column="0">
-                        <materialDesign:Card Background="Pink" Height="80">
-                            <materialDesign:PackIcon Kind="Volleyball" Height="auto" Width="100" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                        <materialDesign:Card Height="80" Background="Pink">
+                            <materialDesign:PackIcon
+                                Width="100"
+                                Height="auto"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Kind="Volleyball" />
                         </materialDesign:Card>
                     </Grid>
                     <Grid Grid.Column="2">
                         <Button
-            Grid.Column="5"
-            Height="26" 
-            Margin="0" 
-            Width="24" 
-            Command="{Binding Path=DataContext.DelfieldCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}}" CommandParameter="{Binding}"
-            
-            Background="{x:Null}" 
-            BorderBrush="{x:Null}" 
-            Padding="0">
-                            <materialDesign:PackIcon 
-                Kind="DeleteOutline" 
-                Height="24"
-                Width="24"
-                Foreground="Red" 
-                HorizontalAlignment="Left" 
-                VerticalAlignment="Center" />
+                            Grid.Column="5"
+                            Width="24"
+                            Height="26"
+                            Margin="0"
+                            Padding="0"
+                            Background="{x:Null}"
+                            BorderBrush="{x:Null}"
+                            Command="{Binding Path=DataContext.DelfieldCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}}"
+                            CommandParameter="{Binding}">
+                            <materialDesign:PackIcon
+                                Width="24"
+                                Height="24"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Center"
+                                Foreground="Red"
+                                Kind="DeleteOutline" />
                         </Button>
                     </Grid>
                     <Grid Grid.Column="1">
                         <Grid.RowDefinitions>
-                            <RowDefinition></RowDefinition>
-                            <RowDefinition></RowDefinition>
+                            <RowDefinition />
+                            <RowDefinition />
                         </Grid.RowDefinitions>
                         <Grid Grid.Row="0">
-                            <TextBlock Margin="10,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Bottom"
-                         Foreground="#8c9aa1" FontSize="25" FontWeight="ExtraBold"  Text="{Binding List_FieldVolleyball.name}" TextWrapping="WrapWithOverflow" 
-                                   ></TextBlock>
+                            <TextBlock
+                                Margin="10,0,0,0"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Bottom"
+                                FontSize="25"
+                                FontWeight="ExtraBold"
+                                Foreground="#8c9aa1"
+                                Text="{Binding List_FieldVolleyball.name}"
+                                TextWrapping="WrapWithOverflow" />
                         </Grid>
                         <Grid Grid.Row="1">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="3*"></ColumnDefinition>
-                                <ColumnDefinition Width="3*"></ColumnDefinition>
+                                <ColumnDefinition Width="3*" />
+                                <ColumnDefinition Width="3*" />
                             </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="0" Margin="10" Text="Condition: " HorizontalAlignment="Right" VerticalAlignment="Center" Foreground="Black" FontSize="15"></TextBlock>
-                            <TextBlock Grid.Column="1"  HorizontalAlignment="Left" VerticalAlignment="Center"
-                         Foreground="Black"  FontSize="15"  Text="{Binding List_FieldVolleyball.condition}" TextWrapping="WrapWithOverflow" 
-                                   ></TextBlock>
+                            <TextBlock
+                                Grid.Column="0"
+                                Margin="10"
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Center"
+                                FontSize="15"
+                                Foreground="Black"
+                                Text="Condition: " />
+                            <TextBlock
+                                Grid.Column="1"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Center"
+                                FontSize="15"
+                                Foreground="Black"
+                                Text="{Binding List_FieldVolleyball.condition}"
+                                TextWrapping="WrapWithOverflow" />
                         </Grid>
                     </Grid>
 
